# Quantitative-Trading

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_phase4.py  002_governance_ids.py  003_decision_mode.py
backend/scripts/: run_live.py  run_optimization_worker.py  run_provider_discovery.py  run_validation.py  run_validation_worker.py  setup.ps1  setup.sh  test_telegram.py
backend/src/: main.py
backend/src/analytics/: __init__.py  queries.py
backend/src/api/: auth.py  deps.py
backend/src/core/: exceptions.py  settings.py
backend/src/data/: __init__.py  csv_provider.py  live_provider.py  market_cache.py
backend/src/db/: models.py  session.py
backend/src/engine/: __init__.py  aggregator.py  config.py  decision_engine.py  final_signal_builder.py  market_filter.py  models.py  risk_manager.py
backend/src/events/: __init__.py  bus_factory.py  envelopes.py  event_bus.py  handler_factory.py  in_memory_bus.py  redis_bus.py
backend/src/execution/: __init__.py  config.py  engine.py  risk_gate.py  simulated.py  simulated_events.py  simulated_exits.py  simulated_pending.py  simulated_positions.py  simulated_pricing.py
backend/src/features/: __init__.py  builder.py  config.py  context_deriver.py  drift.py  registry.py  store.py
backend/src/governance/: __init__.py  experiment_store.py  live_gate.py  revision_store.py
backend/tests/: test_contracts.py  test_settings.py
(+329 files in other folders)
